err/rellu.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/PyGithub-1.35.egg-info'...
Listing './lib/python3.5/site-packages/PyJWT-1.5.3.dist-info'...
Listing './lib/python3.5/site-packages/github'...
Listing './lib/python3.5/site-packages/github/tests'...
Listing './lib/python3.5/site-packages/github/tests/ReplayData'...
Listing './lib/python3.5/site-packages/invoke'...
Listing './lib/python3.5/site-packages/invoke/parser'...
Listing './lib/python3.5/site-packages/invoke/vendor'...
Listing './lib/python3.5/site-packages/invoke/vendor/fluidity'...
Listing './lib/python3.5/site-packages/invoke/vendor/lexicon'...
Listing './lib/python3.5/site-packages/invoke/vendor/yaml3'...
Listing './lib/python3.5/site-packages/invoke-0.22.0.dist-info'...
Listing './lib/python3.5/site-packages/jwt'...
Listing './lib/python3.5/site-packages/jwt/contrib'...
Listing './lib/python3.5/site-packages/jwt/contrib/algorithms'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/rellu'...
Compiling './lib/python3.5/site-packages/rellu/releasenotes.py'...
***   File "./lib/python3.5/site-packages/rellu/releasenotes.py", line 46
    raise Exit(f'Cannot create release notes for development '
                                                             ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/rellu/tasks.py'...
***   File "./lib/python3.5/site-packages/rellu/tasks.py", line 34
    print(f'Removing directory {name!r}.')
                                        ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/rellu/version.py'...
***   File "./lib/python3.5/site-packages/rellu/version.py", line 74
    raise Exit(f'Invalid version {version!r}.')
                                             ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/rellu-0.6.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
